refactor: fix warnings, remove duplicating code